# Sovereignty-AI-Gate

./: .gitignore  ARCHITECTURE_RULES.md  CHARTER.md  CONTRIBUTING.md  LICENSE  PLAYGROUND.md  README.md  SECURITY.md  Sovereign_Architecture.md  audit-finding-summary.txt  gate_one_quota_integration.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  pytest.ini  quota_manager.py  sbp_protocol_spec.md
.github/workflows/: conformance.yml  dashboard-lint.yml  tests.yml
RFC/: LEGACY.md  RFC-0000-SIA-Core-Principles-and-Index.md  RFC-002-Implementation-Plan.md  RFC-002-Proof-Gated-Authority.md  SIA-EP-0001.md
constraints/: py312.txt
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: configmap.yaml  deployment.yaml  service.yaml
deploy/nginx/: default.conf
docs/architecture/: ADR-0001-package-ownership.md  authority_lifecycle.md  boundary_model.md  cloud_egress_protection.md  deployment_model.md  deterministic_dashboard.md  pr-001-governed-mcp-entry-point.md  proof_model.md  registry_governance.md  s004-governed-github-deployment-skill.md
docs/conformance/: failure_codes.md  test_matrix.md
docs/dashboard/: deterministic-behavior.md
patches/: unified-sovereign-eventclass-routing-mldsa.patch
scripts/: bootstrap.sh  build_release.sh  check_dependency_policy.py  generate_sbom.py  lint_dashboard.sh  run_conformance.sh  run_tests.sh  validate_cloud_config.py
tests/: test_cloud_egress_envelope.py  test_deployment_ports.py  test_fedramp_phase4_hardening.py  test_mcp_server.py  test_providers.py  test_smoke.py  test_tools_runtime.py
(+201 files in other folders)
